--- a/package/base-files/files/etc/sysctl.conf
+++ b/package/base-files/files/etc/sysctl.conf
@@ -1,1 +1,5 @@
 # Defaults are configured in /etc/sysctl.d/* and can be customized in this file
+net.netfilter.nf_conntrack_max = 100000000
+net.core.default_qdisc=fq
+net.ipv4.tcp_congestion_control=bbr
+net.ipv4.tcp_fastopen=3
