--- a/package/network/services/dnsmasq/files/dhcp.conf
+++ b/package/network/services/dnsmasq/files/dhcp.conf
@@ -20,12 +20,14 @@ config dnsmasq
 	#list notinterface	lo
 	#list bogusnxdomain     '64.94.110.11'
 	option localservice	1  # disable to allow DNS requests from non-local subnets
-	option ednspacket_max	1232
+	option ednspacket_max	1280
+	option filter_aaaa 1
+	option sequential_ip 1
 
 config dhcp lan
 	option interface	lan
-	option start 	100
-	option limit	150
+	option start 	2
+	option limit	254
 	option leasetime	12h
 
 config dhcp wan
